# omni-server-mlx

./: .gitignore  .pre-commit-config.yaml  Makefile  PR_DESCRIPTION.md  pyproject.toml
.github/workflows/: loctree.yml
docs/: LIBRAXIS_FEATURES.md  LOCTREE_ANALYSIS.md
examples/: anthropic_message.ipynb  audio.ipynb  chat.ipynb  chat_prompt_cached.ipynb  chat_thinking.ipynb  embeddings.ipynb
scripts/: start_8100.sh
src/mlx_omni_server/: main.py  routers.py
src/mlx_omni_server/chat/anthropic/: anthropic_messages_adapter.py  anthropic_schema.py  models_service.py  router.py  schema.py
src/mlx_omni_server/chat/mlx/: chat_generator.py  core_types.py  logprobs_processor.py  model_types.py  models.py  outlines_logits_processor.py  prompt_cache.py  wrapper_cache.py
src/mlx_omni_server/chat/mlx/tools/: base_tools.py  chat_template.py  glm45_tools_parser.py  hugging_face.py  llama3.py  mistral.py  qwen3_moe_tools_parser.py  thinking_decoder.py
src/mlx_omni_server/chat/openai/: openai_adapter.py  router.py  schema.py
src/mlx_omni_server/chat/openai/models/: models.py  models_service.py  schema.py
src/mlx_omni_server/core/: __init__.py  config.py
src/mlx_omni_server/embeddings/: embeddings_service.py  router.py  schema.py
src/mlx_omni_server/images/: images.py  images_service.py  schema.py
src/mlx_omni_server/middleware/: logging.py
src/mlx_omni_server/responses/: __init__.py  adapter.py  context_builder.py  normalizer.py  router.py  schema.py  store.py
src/mlx_omni_server/routing/: __init__.py  multi_provider.py  upstream_pool.py
src/mlx_omni_server/stt/: schema.py  stt.py  whisper_model.py
src/mlx_omni_server/tools/: __init__.py  registry.py
src/mlx_omni_server/tools/builtin/: __init__.py  code_interpreter.py  web_search.py
src/mlx_omni_server/tts/: schema.py  tts.py  tts_service.py
src/mlx_omni_server/utils/: circuit_breaker.py  harmony_parser.py  logger.py
tests/: audio_test.py  conftest.py  embedding_test.py  images_test.py  models_test.py  test_circuit_breaker.py  test_responses.py
tests/chat/anthropic/: test_anthropic_messages.py
tests/chat/mlx/: test_chat_generator.py  test_chat_template.py  test_structured_output.py  test_wrapper_cache.py
tests/chat/mlx/tools/: test_glm45_tool_type_conversion.py  test_load_tools_parser.py  test_qwen3_moe_tools_parser.py  test_qwen3_tool_type_conversion.py
tests/chat/openai/: test_chat_completions.py  test_openai_structured_output.py  test_prompt_cache.py  test_reasoning.py
