[project]
name = "mlx-omni-server"
version = "0.5.2"
description = "MLX Omni Server is a server that provides OpenAI-compatible APIs using Apple's MLX framework."
authors = [{ name = "madroid", email = "madroidmaq@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
keywords = [
    "mlx",
    "ai",
    "agi",
    "aigc",
    "server",
    "openai",
    "tts",
    "stt",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # core
    "fastapi>=0.116.1,<0.117",
    "pydantic>=2.9.2,<3",
    "uvicorn>=0.34.0,<0.35",
    "rich>=13.9.4",
    # chat
    "mlx-lm>=0.30.0",
    "python-multipart>=0.0.20,<0.0.21",
    "sse-starlette>=2.1.3,<3",
    "outlines==1.0.4",
    # models
    "huggingface-hub>=0.30",
    # audio
    "f5-tts-mlx>=0.2.5,<0.3",
    "mlx-whisper>=0.4.1",
    "mlx-audio>=0.2.4",
    "numba>=0.57.0",
    # images
    "mflux>=0.13.0,<0.14",
    # embeddings
    "mlx-embeddings>=0.0.3",
]

[project.urls]
Repository = "https://github.com/madroidmaq/mlx-omni-server"

[project.scripts]
mlx-omni-server = "mlx_omni_server.main:start"

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "httpx>=0.27.2,<0.28",
    "pre-commit>=4.0.1,<5",
    "black>=24.10.0,<25",
    "isort>=5.13.2,<6",
    "weave>=0.51.46,<0.60",
    "openai>=1.97.0",
    "anthropic>=0.57.1",
    # linting & formatting (LibraxisAI)
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit[toml]>=1.7.0",
    # for en_core_web_sm models
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[tool.hatch.build.targets.sdist]
include = ["src/mlx_omni_server"]

[tool.hatch.build.targets.wheel]
include = ["src/mlx_omni_server"]

[tool.hatch.build.targets.wheel.sources]
"src/mlx_omni_server" = "mlx_omni_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
prerelease = "allow"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# === Ruff configuration (LibraxisAI) ===
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "ARG001", # unused function argument (common in FastAPI)
    "PLW0603", # global statement (singleton pattern)
    "TC003",  # type-checking block (runtime needed)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004", "S101"]
"examples/*" = ["ERA", "ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# === Bandit security configuration ===
[tool.bandit]
exclude_dirs = ["tests", "examples", ".venv"]
skips = ["B101", "B311"]  # assert, random (not crypto)

# === Mypy configuration ===
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "examples/", "build/"]

[[tool.mypy.overrides]]
module = "mlx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mflux.*"
ignore_missing_imports = true

# Created by M&K (c)2025 The LibraxisAI Team
